[package]
name = "parallel_map"
version = "0.1.0"
authors = ["Armin Namavari <arminn@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
num_cpus = "1.13.0"
crossbeam = "0.8.0"
scoped_threadpool = "0.1.9"  